--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
