--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=http://localhost:3000/api/v1
-# BASE_URL=http://167.71.71.195/api/v1
+# VITE_BASE_URL=http://localhost:3000/api/v1
+VITE_BASE_URL=http://167.71.71.195/api/v1
