--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
