--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # VITE_BASE_URL=http://localhost:3000/api/v1
 # VITE_BASE_URL=http://167.71.71.195/api/v1
-VITE_BASE_URL=https://app.boostlab.ph
+VITE_BASE_URL=https://app.boostlab.ph/api/v1
 
