--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-# VITE_BASE_URL=http://localhost:3000/api/v1
-VITE_BASE_URL=https://app.boostlab.ph/api/v1
+VITE_BASE_URL=http://localhost:3000/api/v1
+# VITE_BASE_URL=https://app.boostlab.ph/api/v1
+    
