--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
@@ -38,6 +39,7 @@
     "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
