--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=http://localhost:3000/api/v1
-# VITE_BASE_URL=https://app.boostlab.ph/api/v1
-VITE_FRONTEND_URL=http://localhost:5173
-# VITE_FRONTEND_URL=http://app.boostlab.ph
+# VITE_BASE_URL=http://localhost:3000/api/v1
+VITE_BASE_URL=https://app.boostlab.ph/api/v1
+# VITE_FRONTEND_URL=http://localhost:5173
+VITE_FRONTEND_URL=http://app.boostlab.ph
