--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.6.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
@@ -42,6 +43,13 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-emoji": "^5.0.2",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
